# Google-ADK-Portfolio

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
drake_talley_adk/: __init__.py  agent.py  aml_alert_agents.py  aml_alert_data.py  aml_alert_tools.py  portfolio_data.py  portfolio_model.py  portfolio_tools.py  revenue_ops_agents.py  revenue_ops_data.py  revenue_ops_tools.py
recruiter_demo/: index.html  package-lock.json  package.json  vite.config.ts
recruiter_demo/src/: App.tsx  index.css
tests/: __init__.py  test_agent_graph.py  test_aml_alert_tools.py  test_portfolio_model.py  test_portfolio_tools.py  test_revenue_ops_tools.py
